# self-evolving-agents

./: .env.example  .gitignore  01_extracted_patterns.md  02_synthetic_conversations.md  04_training_implementation_plan.md  05_level2_architectural_changes.md  06_detailed_implementation_roadmap.md  07_level2_detailed_roadmap.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt
config/: level2_run_settings.yaml
data/: comparison_gpt41_base_vs_finetuned.json  comparison_results.json  finetuned_model_info.json  finetuning_job_id.txt  handcrafted_examples.jsonl  real_conversations_parsed.jsonl  test_set.jsonl  validation_from_real.jsonl
data/claude_code_conversations/: claude-conversation-2025-10-15-dace667b.md  claude-conversation-2025-10-21-1b229b2c.md  claude-conversation-2025-10-21-65c61ae3.md  claude-conversation-2025-10-21-9fa1db40.md  claude-conversation-2025-10-26-4024c40b.md  claude-conversation-2025-11-04-agent-da.md  claude-conversation-2025-11-05-agent-df.md  claude-conversation-2025-11-08-agent-8a.md  claude-conversation-2025-11-08-agent-d8.md  claude-conversation-2025-11-09-agent-aa.md
data/finetuning/: eval_comparison.json  test_holdout.jsonl  train_v2.jsonl  train_v3.jsonl  validation_v2.jsonl
docs/: 03_preference_profile.md  08_synthetic_data_generation.md  09_level2_unified_architecture.md  10_sft_vs_dpo_analysis.md  11_phase0_results.md  12_level2_crawl_implementation_roadmap.md  13_level2_run_implementation_roadmap.md
scripts/: generate_synthetic_data.sh
src/common/: config.py  utils.py
src/level1/crawl/: agent.py  (+1 more)
(+63 files in other folders)
